[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rebalancing"
version = "0.1.0"
description = "Système industriel de rééquilibrage de vélos"
dependencies = [
    "pandas",
    "numpy",
    "scipy",
    "tensorly",
    "gurobipy",
    "matplotlib",
    "scikit-learn"
]

[tool.setuptools.packages.find]
where = ["src"]

